recommit added two files

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">csiPublicWebsite2015</a>
+            <a class="navbar-brand" href="#/"></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -79,9 +79,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
       <script src="../node_modules/jquery/dist/jquery.min.js"></script>
       <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+<!--        <script src="scripts/app.js"></script>-->
+<!--        <script src="scripts/controllers/main.js"></script>-->
+<!--        <script src="scripts/controllers/about.js"></script>-->
         <!-- endbuild -->
 </body>
 </html>
