--- a/app/index.html
+++ b/app/index.html
@@ -34,15 +34,17 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"></a>
+            <a class="navbar-brand" href="#/"><img style="margin-top:-24px;" src="images/csiLogoNew2015.png" alt="Collectors Solutions, Inc. End to End Payment Solutions"/></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+              <li><a ng-href="#/solution">Solution</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+                 <li><a ng-href="#/media">Media</a></li>
+              <li><a ng-href="#/contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -53,10 +55,15 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+    <div id="footer" class="footer navbar-fixed-bottom">
+        <div class="container">
+            <p class="text-muted credit">
+                <small><strong>© CollectorSolutions, Inc. 2015</strong></small><span style="float: right;">
+                    <small>Dashboard designed for Alphapointe</small>
+                   
+                </span>
+            </p>
+        </div>
     </div>
 
 
