--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+<!--http://www.fima.lt/en/#top-->
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
@@ -34,23 +34,25 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"><img style="margin-top:-24px;" src="images/csiLogoNew2015.png" alt="Collectors Solutions, Inc. End to End Payment Solutions"/></a>
+            <a class="navbar-brand" href="#/"><img src="images/collectorLogo2015.png" alt="Collectors Solutions, Inc. End to End Payment Solutions"/></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/solution">Solution</a></li>
-              <li><a ng-href="#/about">About</a></li>
-                 <li><a ng-href="#/media">Media</a></li>
-              <li><a ng-href="#/contact">Contact</a></li>
+              <li class="active"><a href="#/">HOME</a></li>
+              <li><a ng-href="#/solution">SOLUTION</a></li>
+              <li><a ng-href="#/about">ABOUT</a></li>
+                 <li><a ng-href="#/media">MEDIA</a></li>
+              <li><a ng-href="#/contact">CONTACT</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-
+      <div class="container" style="width:100%; padding:0; margin-top:-20px;">
+      <img class="img-responsive" src="https://s3.amazonaws.com/csi_public_site/support.jpg">
+      </div>
     <div class="container">
     <div ng-view=""></div>
     </div>
