latest responsive commit

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,10 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"><img src="images/collectorLogo2015.png" alt="Collectors Solutions, Inc. End to End Payment Solutions"/></a>
+            <a class="navbar-brand" href="#/">
+             <img class="hidden-md hidden-sm hidden-lg visible-xs" style="margin-top:-5px;" src="images/collectorLogo2015_sm.png" alt="Collector Solutions, Inc." />
+             <img class="visible-md visible-sm visible-lg hidden-xs" src="images/collectorLogo2015.png" alt="Collector Solutions, Inc."/> 
+              </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
