--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,10 @@
                      <i class="fa fa-circle text-danger fa-stack-2x"></i>
                       <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
                     </span>
+                         <span class="fa-stack fa-lg">
+                     <i class="fa fa-circle text-primary fa-stack-2x"></i>
+                      <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
+                    </span>
                     </div>
                     <ul class="nav navbar-nav">
                         <li><a href="#/">HOME</a>
@@ -170,14 +174,14 @@
                 <div class="row">
                     <div class="container">
                         <div id="final-footer">
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
 
                             </div>
-                            <div class="col-xs-4 text-center">
+                            <div class="col-xs-6 text-center">
                                 Copyright © 2015 CollectorSolutions, Inc. All Rights Reserved
-                                <br>316 S Baylen St, Pensacola, Florida - USA
+                                <br>316 S Baylen St, Pensacola, Florida 32504 - USA
                             </div>
-                            <div class="col-xs-4 text-right">
+                            <div class="col-xs-3 text-right">
                                 <span class="fa-stack fa-lg">
                <i class="fa fa-circle text-primary fa-stack-2x"></i>
                <a href="https://www.facebook.com/collectorsolutionsinc" target="_blank"><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></a>
@@ -189,6 +193,10 @@
                                 <span class="fa-stack fa-lg">
              <i class="fa fa-circle text-danger fa-stack-2x"></i>
               <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
+            </span>
+                                  <span class="fa-stack fa-lg">
+             <i class="fa fa-circle text-primary fa-stack-2x"></i>
+              <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
             </span>
                             </div>
                         </div>
