--- a/app/index.html
+++ b/app/index.html
@@ -110,8 +110,8 @@
     </div>
 
     <!--  footer  -->
- <div class="row">
-    <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0;">
+
+    <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:absolute; bottom:0; width:100%;">
             <div class="container">
                 <div class="col-sm-3 col-xs-6">
                     <div class="foot-header">
@@ -207,7 +207,7 @@
         </div>
 
 
-    </div>
+   
     <!--      modal-->
     <div id="salesModal" class="modal fade">
         <div class="modal-dialog">
