added privacy policy

--- a/app/index.html
+++ b/app/index.html
@@ -104,14 +104,14 @@
         <div class="col-xs-12">
 
 
-            <div ng-view="" style="text-align:center; z-index:998; min-height:300px;"></div>
+            <div ng-view="" style="text-align:center; z-index:998; margin-top:14%;"></div>
         </div>
 
     </div>
 
     <!--  footer  -->
 
-    <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:absolute; bottom:0; width:100%;">
+    <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:relative; bottom:0; width:100%;">
             <div class="container">
                 <div class="col-sm-3 col-xs-6">
                     <div class="foot-header">
@@ -135,7 +135,7 @@
                         <a href="mailto:help@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Need help?</a>
                         <a href="mailto:sales@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Contact Sales</a>
                         <a href="#" id="bottomCall"><i class="fa fa-fw fa-laptop"></i> Get a Demo</a>
-                        <a href="#/privacy"><i class=" fa fa-fw fa-user-secret"></i> Privacy Policy</a>
+                        <a ng-href="#/privacy"><i class=" fa fa-fw fa-user-secret"></i> Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6">
@@ -306,6 +306,7 @@
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/media.js"></script>
     <script src="scripts/controllers/solution.js"></script>
+    <script src="scripts/controllers/policy.js"></script>
     <script src="scripts/modal.js"></script>
     <!-- endbuild -->
 </body>
