--- a/app/index.html
+++ b/app/index.html
@@ -54,11 +54,11 @@
                     </span>
                         <span class="fa-stack fa-lg">
                      <i class="fa fa-circle text-danger fa-stack-2x"></i>
-                      <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
+                      <a href="https://plus.google.com/u/0/115194815926751374919/about/p/pub" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
                     </span>
                          <span class="fa-stack fa-lg">
                      <i class="fa fa-circle text-primary fa-stack-2x"></i>
-                      <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
+                      <a href="https://www.linkedin.com/pub/collector-solutions/bb/460/743" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
                     </span>
                     </div>
                     <ul class="nav navbar-nav">
@@ -122,7 +122,7 @@
                         <a href="#/solution"><i class="fa fa-fw fa-cogs"></i> SOLUTION</a>
                         <a href="#/about"><i class="fa fa-fw fa-info"></i> ABOUT</a>
                         <a href="#/media"><i class="fa fa-fw fa-newspaper-o"></i> MEDIA</a>
-                        <a href="#/contact"><i class="fa fa-fw fa-phone"></i> CONTACT</a>
+                        <a href="#/contact" onclick="expertModal()"><i class="fa fa-fw fa-phone"></i> CONTACT</a>
                         <a href="http://api.collectorsolutions.com/"><i class="fa fa-fw fa-code"></i> API</a>
                     </div>
                 </div>
@@ -130,11 +130,11 @@
                     <div class="foot-header"> CONNECT <i class="fa fa-fw fa-mobile fa-lg"></i>
                     </div>
                     <div class="foot-links">
-                        <a href="#"><i class="fa fa-fw fa-map-marker"></i> 316 S Baylen, Pensacola, FL 32502</a>
-                        <a href="#"><i class="fa fa-fw fa-phone"></i> 850-444-9330</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-map-marker"></i> 316 S Baylen, Pensacola, FL 32502</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-phone"></i> 850-444-9330</a>
                         <a href="mailto:help@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Need help?</a>
                         <a href="mailto:sales@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Contact Sales</a>
-                        <a href="#" id="bottomCall"><i class="fa fa-fw fa-laptop"></i> Get a Demo</a>
+                        <a href="#/blank" onclick="expertModal()" id="bottomCall"><i class="fa fa-fw fa-laptop"></i> Get a Demo</a>
                         <a ng-href="#/privacy"><i class=" fa fa-fw fa-user-secret"></i> Privacy Policy</a>
                     </div>
                 </div>
@@ -143,12 +143,12 @@
                         PAYMENT SOLUTIONS
                     </div>
                     <div class="foot-links">
-                        <a href="#"><i class="fa fa-fw fa-globe"></i> Web</a>
-                        <a href="#"><i class="fa fa-fw fa-phone"></i> Phone</a>
-                        <a href="mailto:help@collectorsolutions.com"><i class="fa fa-fw fa-building"></i> Point of Sale</a>
-                        <a href="mailto:sales@collectorsolutions.com"><i class="fa fa-fw fa-refresh"></i> Recurring Billing</a>
-                        <a href="#" id="bottomCall"><i class="fa fa-fw fa-bullhorn"></i> IVR</a>
-                        <a href="#/privacy"><i class=" fa fa-fw fa-mobile-phone"></i> Mobile</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-globe"></i> Web</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-phone"></i> Phone</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-building"></i> Point of Sale</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-refresh"></i> Recurring Billing</a>
+                        <a href="#/blank" id="bottomCall"><i class="fa fa-fw fa-bullhorn"></i> IVR</a>
+                        <a href="#/blank"><i class=" fa fa-fw fa-mobile-phone"></i> Mobile</a>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6">
@@ -156,10 +156,10 @@
                         PAYMENT OPTIONS <i class="fa fa-fw fa-credit-card fa-lg"></i>
                     </div>
                     <div class="foot-links" style="margin-top:-10px">
-                        <a href="#"> <img src="images/cc_group_small.png">
+                        <a href="#/blank"> <img src="images/cc_group_small.png">
                         </a>
-                        <a href="#"><i class="fa fa-fw fa-mobile"></i> Text to Pay</a>
-                        <a href="#"><i class="fa fa-fw fa-desktop"></i> Electronic Bill Presentment</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-mobile"></i> Text to Pay</a>
+                        <a href="#/blank"><i class="fa fa-fw fa-desktop"></i> Electronic Bill Presentment</a>
                     </div>
                 </div>
                 <div class="row">
@@ -192,11 +192,11 @@
             </span>
                                 <span class="fa-stack fa-lg">
              <i class="fa fa-circle text-danger fa-stack-2x"></i>
-              <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
+              <a href="https://plus.google.com/115194815926751374919/posts?hl=en" target="_blank"><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></a>
             </span>
                                   <span class="fa-stack fa-lg">
              <i class="fa fa-circle text-primary fa-stack-2x"></i>
-              <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
+              <a href="https://www.linkedin.com/pub/collector-solutions/bb/460/743" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a>
             </span>
                             </div>
                         </div>
