--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html class="no-js">
-
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>CollectorSolutions - Tax Collector, Utility & Municipality Payment Processor</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <meta http-equiv="cleartype" content="on">
+    <meta name="description" content="">
+    <meta http-equiv="expires" content="Mon, 26 Jul 1997 05:00:00 GMT"/>
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta name="robots" content="noindex, nofollow, noarchive">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -17,7 +25,6 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
-
 <body ng-app="csiPublicWebsite2015App">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -28,14 +35,12 @@
         <div class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-
                     <a class="navbar-brand" href="#/">
                         <img class="hidden-md hidden-sm hidden-lg visible-xs" style="margin-top:-5px;" src="images/collectorLogo2015_sm.png" alt="Collector Solutions, Inc." />
                         <img class="visible-md visible-sm visible-lg hidden-xs" src="images/collectorLogo2015.png" alt="Collector Solutions, Inc." />
@@ -104,6 +109,7 @@
 
     </div>
     <!--  footer  -->
+     <div class="row">
     <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:relative; bottom:0; width:100%;">
         <div class="container">
             <div class="col-sm-3 col-xs-6">
@@ -197,6 +203,7 @@
             </div>
         </div>
 
+    </div>
     </div>
     <!--modal-->
     <div id="salesModal" class="modal fade">
