added newer files

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div style="position:fixed; z-index:0;">
+    <div class="rslidesContainer">
         <ul class="rslides">
             <li><img class="img-responsive" src="https://s3.amazonaws.com/csi_public_site/support.jpg" alt='Collector solutions support'>
             </li>
