--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
-                    <div class="col-xs-12 text-right" style="margin-bottom:-70px; margin-top:-50px; padding-top:15px;">
+                    <div class="col-xs-12 text-right" style="margin-bottom:-70px; margin-top:-50px; padding-top:15px; ">
                         <span class="fa-stack fa-lg">
                        <i class="fa fa-circle text-primary fa-stack-2x"></i>
                        <a href="https://www.facebook.com/collectorsolutionsinc" target="_blank"><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></a>
@@ -104,7 +104,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <div ng-view="" style="text-align:center; z-index:998; margin-top:14%;"></div>
+            <div ng-view="" style="text-align:center; z-index:998;"></div>
         </div>
 
     </div>
