--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/">
+                    <a class="navbar-brand" ui-sref="/">
                         <img class="hidden-md hidden-sm hidden-lg visible-xs" style="margin-top:-5px;" src="images/collectorLogo2015_sm.png" alt="Collector Solutions, Inc." />
                         <img class="visible-md visible-sm visible-lg hidden-xs" src="images/collectorLogo2015.png" alt="Collector Solutions, Inc." />
                     </a>
@@ -66,15 +66,15 @@
                     </span>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li><a href="#/">HOME</a>
+                        <li><a ui-sref="home">HOME</a>
                         </li>
-                        <li><a ng-href="#/solution">SOLUTION</a>
+                        <li><a ui-sref="solution">SOLUTION</a>
                         </li>
-                        <li><a ng-href="#/about">ABOUT</a>
+                        <li><a ui-sref="about">ABOUT</a>
                         </li>
-                        <li><a ng-href="#/media">MEDIA</a>
+                        <li><a ui-sref="media">MEDIA</a>
                         </li>
-                        <li><a id="contactCall" ng-href="#/contact">CONTACT</a>
+                        <li><a id="contactCall" href="/contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +104,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <div ng-view="" style="text-align:center; z-index:998;"></div>
+            <div ui-view style="text-align:center; z-index:998;"></div>
         </div>
 
     </div>
@@ -131,10 +131,10 @@
                 <div class="foot-links">
                     <a href="#/blank"><i class="fa fa-fw fa-map-marker"></i> 316 S Baylen, Pensacola, FL 32502</a>
                     <a href="#/blank"><i class="fa fa-fw fa-phone"></i> 850-444-9330</a>
-                    <a href="mailto:help@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Need help?</a>
+                    <a ui-sref="help"><i class="fa fa-fw fa-question-circle"></i> Need help?</a>
                     <a href="mailto:sales@collectorsolutions.com"><i class="fa fa-fw fa-envelope"></i> Contact Sales</a>
                     <a href="#/blank" onclick="expertModal()" id="bottomCall"><i class="fa fa-fw fa-laptop"></i> Get a Demo</a>
-                    <a ng-href="#/privacy"><i class=" fa fa-fw fa-user-secret"></i> Privacy Policy</a>
+                    <a ui-sref="privacy"><i class=" fa fa-fw fa-user-secret"></i> Privacy Policy</a>
                 </div>
             </div>
             <div class="col-sm-3 col-xs-6">
