working no scroll

--- a/app/index.html
+++ b/app/index.html
@@ -81,13 +81,13 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-xs-12">
+        
             <div class="title-feed">
+                <div class="col-xs-12">
                 <span id="titleHeader">THE RESPONSIVE PAYMENT PLATFORM</span>
             </div>
         </div>
-    </div>
+
     <div class="rslidesContainer">
         <ul class="rslides">
             <li><img class="img-responsive" src="https://s3.amazonaws.com/csi_public_site/support.jpg" alt='Collector solutions support'>
@@ -102,15 +102,12 @@
             </li>
         </ul>
     </div>
-    <div class="row">
+
         <div class="col-xs-12">
             <div ui-view style="text-align:center; z-index:998;"></div>
         </div>
-
-    </div>
     <!--  footer  -->
-     <div class="row">
-    <div class="navbar" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:relative; bottom:0; width:100%;">
+    <div class="col-xs-12" style="background-color:rgb(249, 249, 249); border-top: 1px solid #E0E0E0; margin-bottom:-50px; padding:50px 0 25px 0; position:relative; bottom:0; width:100%;">
         <div class="container">
             <div class="col-sm-3 col-xs-6">
                 <div class="foot-header">
@@ -202,8 +199,6 @@
                 </div>
             </div>
         </div>
-
-    </div>
     </div>
     <!--modal-->
     <div id="salesModal" class="modal fade">
